# DrawTextServer

./: CMakeLists.txt  INSTALL  KNOWNISSUES.txt  README.md  TODO.txt  notes.doc
Resources/: pack_gen.ipynb  package2.http  package2_bad.http  package2_good.http
Resources/.ipynb_checkpoints/: pack_gen-checkpoint.ipynb
functional/: main.cpp  main_test_client.cpp  main_test_server.cpp
functional/include/: mock_processor1.h  mock_processor2.h  mock_server.h
include/: client.h  client_cfg.h  comb_packet.h  common.h  configure.h  control.h  error.h  image_cproc.h  image_sproc.h  logger.h  mng_thread.h  packet.h  processor.h  server.h  server_cfg.h  utility.h  watchdog.h
patch/thread/detail/: config.hpp
patch/thread/pthread/: thread_heap_alloc.hpp
src/: client.cpp  comb_packet.cpp  configure.cpp  control.cpp  error.cpp  image_cproc.cpp  image_sproc.cpp  logger.cpp  main.cpp  mng_thread.cpp  packet.cpp  processor.cpp  server.cpp  watchdog.cpp
unittests/: main_test_general.cpp
